# oop_tasks

./: .gitignore  CMakeLists.txt  Team.h  Tournament.h  main.cpp
task1/: Task1.cpp  Task1.h  main.cpp
task2/: Task2.cpp  Task2.h  main.cpp
task3/: Task3.cpp  Task3.h  Team.cpp  Team.h  Tournament.cpp  Tournament.h  main.cpp
task4/: Task4.cpp  Task4.h  main.cpp
task5/: Task5.cpp  Task5.h  Team.cpp  Team.h  Tournament.cpp  Tournament.h  main.cpp
task6/: Task6.cpp  Task6.h  Team.cpp  Team.h  Tournament.cpp  Tournament.h  main.cpp
task7/: Task7.cpp  Task7.h  Team.cpp  Team.h  Tournament.cpp  Tournament.h  main.cpp
task8/: ArrayList.cpp  ArrayList.h  Task8.cpp  Task8.h  Team.cpp  Team.h  main.cpp
task9/: Task9.cpp  Task9.h  Team.cpp  Team.h  Tournament.cpp  Tournament.h  main.cpp
